--- a/src/main/resources/apkeditor.properties
+++ b/src/main/resources/apkeditor.properties
@@ -1,4 +1,4 @@
-app.name=APKEditor
-app.version=${version}
-app.repo=https://github.com/REAndroid/APKEditor
-app.description=Android binary resource files editor
+app.name=
+app.version=
+app.repo=
+app.description=
